@@ -1,1 +1,2 @@
-#define IDM_DEMO_INVIEW				32801
+#define IDM_DEMO_INVIEW             32801
+#define IDM_DEMO_OBSERVER           32802
