@@ -2,8 +2,10 @@
 #include "ChildView.h"
 #include <ClsID_ViewExample.h>
 #include <EmbedWnd.cpp>
+#include <LockCount.h>
+#include <RawCmdMsgObserver.h>
 
-CChildView::CChildView()
+CChildView::CChildView() : m_locker(0)
 {
 }
 
@@ -56,9 +58,49 @@ BOOL CChildView::DestroyWindow()
 
 BOOL CChildView::OnCmdMsg(UINT nID, int nCode, void* pExtra, AFX_CMDHANDLERINFO* pInfo)
 {
-    return m_wndLeft.OnCmdMsg(nID, nCode, pExtra, pInfo)
-        || m_wndRight.OnCmdMsg(nID, nCode, pExtra, pInfo)
-        || CWnd::OnCmdMsg(nID, nCode, pExtra, pInfo);
+    if (m_wndLeft.OnCmdMsg(nID, nCode, pExtra, pInfo)
+        || m_wndRight.OnCmdMsg(nID, nCode, pExtra, pInfo))
+    {
+        return TRUE;
+    }
+
+    CLockCount locker (&m_locker);
+    if (1 == m_locker)
+    {
+        if (CN_COMMAND == nCode)
+        {
+            RawCmdMsgEventData data(nID);
+            data.Notify();
+            if (data.ret)
+            {
+                return TRUE;
+            }
+        }
+        else if (CN_UPDATE_COMMAND_UI == nCode)
+        {
+            bool enabled = true;
+            bool checked = false;
+            std::wstring text;
+
+            RawCmdMsgEventData data(nID, enabled, checked, text);
+            CCmdUI* pCmdUI = (CCmdUI*)pExtra;
+
+            data.Notify();
+            if (data.ret)
+            {
+                pCmdUI->Enable(enabled);
+                pCmdUI->SetCheck(checked ? 1 : 0);
+                if (!text.empty())
+                {
+                    pCmdUI->SetText(text.c_str());
+                }
+
+                return TRUE;
+            }
+        }
+    }
+    
+    return CWnd::OnCmdMsg(nID, nCode, pExtra, pInfo);
 }
 
 void CChildView::OnSize(UINT nType, int cx, int cy)
